<?xml version="1.0" encoding="utf-8"?>

<playChallenge.writtenNumbersChallenge.recall.keyboard.NumericKeyboardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/numeric_keyboard.layout_height"
    android:visibility="gone"
    tools:visibility="visible"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

<TableRow
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <ImageButton
        android:id="@+id/backSpaceButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/icon_backspace"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallActions"
        android:contentDescription="BackSpace" />

    <ImageButton
        android:id="@+id/nextRowButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/icon_next_row"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallActions"
        android:contentDescription="Next Row"
        />

    <ImageButton
        android:id="@+id/submitRowButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srcCompat="@drawable/icon_check_black"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallActions"
        android:contentDescription="Submit Row"
        />

</TableRow>

<TableRow
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <Button
        android:text="0"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_0" />

    <Button
        android:text="1"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_1" />

    <Button
        android:text="2"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_2" />
    <Button
        android:text="3"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_3" />
    <Button
        android:text="4"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_4" />
</TableRow>

<TableRow
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">

    <Button
        android:text="5"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_5" />

    <Button
        android:text="6"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_6" />
    <Button
        android:text="7"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_7" />
    <Button
        android:text="8"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_8" />
    <Button
        android:text="9"
        android:textSize="@dimen/numeric_keyboard.textSize"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/highlightRecallDigits"
        android:id="@+id/key_9" />
</TableRow>

</playChallenge.writtenNumbersChallenge.recall.keyboard.NumericKeyboardView>