...
            android:text="@string/accuracy"
            android:textColor="@color/score_panel.top_label"
            android:textSize="@dimen/score_panel.top_label.text.size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/accuracyText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/score_panel.value.margin.top"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:textColor="@color/score_panel.value"
...
            android:textSize="@dimen/score_panel.top_label.text.size"
            android:textStyle="bold"
            android:textColor="@color/score_panel.top_label"
            />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:layout_marginTop="@dimen/score_panel.value.margin.top"
            tools:text="100/10"
...
