<?xml version="1.0" encoding="utf-8"?>
<playChallenge.writtenNumbersChallenge.memorization.navigationPanel.NavigationPanel
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:gravity="center"
    tools:context="playChallenge.writtenNumbersChallenge.memorization.NumberMemoryActivity">

    <ImageButton
        android:id="@+id/nextGroupButton"
        android:layout_width="@dimen/next_group_button.layout_width"
        android:layout_height="@dimen/next_group_button.layout_height"
        android:layout_marginBottom="@dimen/next_group_button.layout_margin"
        android:layout_marginTop="@dimen/next_group_button.layout_margin"
        android:background="@drawable/shape_rounded_corners"
        android:elevation="@dimen/button.elevation.resting"
        android:stateListAnimator="@animator/button_elevation"
        android:contentDescription="go"
        app:srcCompat="@drawable/ic_arrow_right" />

</playChallenge.writtenNumbersChallenge.memorization.navigationPanel.NavigationPanel>